@@ -107,14 +107,14 @@ th_brkpos_hints (const thchar_t *str, int len, char *hints)
     for (i = 0; i < len; /* nop */) {
         if (th_isthcons (str[i])) {
             if (i+1 < len && str[i+1] == THANTHAKHAT) {
-                i += 2; // the cons + THANTHAKHAT
+                i += 2; /* the cons + THANTHAKHAT */
             } else if (i+2 < len && str[i+2] == THANTHAKHAT) {
-                i += 3; // the cons + intermediate char + THANTHAKHAT
+                i += 3; /* the cons + intermediate char + THANTHAKHAT */
             } else if (i+2 < len && str[i] != KOKAI && str[i+1] == MAITAIKHU
                        && (str[i+2] == OANG || str[i+2] == WOWAEN))
             {
                 hints[i] = 1;
-                i += 4; // the cons + MAITAIKHU + OANG/WOWAEN + cons
+                i += 4; /* the cons + MAITAIKHU + OANG/WOWAEN + cons */
             } else if ((i > 0
                         && (str[i-1] == MAIHUNAKAT || str[i-1] == SARA_UEE))
                        || (i > 1 && th_isthtone (str[i-1])
@@ -125,25 +125,25 @@ th_brkpos_hints (const thchar_t *str, int len, char *hints)
                 hints[i++] = 1;
             }
         } else if (str[i] == SARA_E || str[i] == SARA_AE) {
-            hints[i] = 1; // sara e/ae
-            i += 2; // sara e/ae + the supposedly cons
+            hints[i] = 1; /* sara e/ae */
+            i += 2; /* sara e/ae + the supposedly cons */
             if (i >= len)
                 break;
             if (str[i] == MAITAIKHU) {
-               i += 2; // MAITAIKHU + the supposedly cons
+               i += 2; /* MAITAIKHU + the supposedly cons */
             } else if (th_isupvowel (str[i])) {
-               i++; // the upper vowel, as part of composite vowel
+               i++; /* the upper vowel, as part of composite vowel */
                if (i < len && th_isthtone (str[i]))
                    i++;
-               i++; // the supposedly cons
+               i++; /* the supposedly cons */
             } else if (i+2 < len && str[i] != KOKAI && str[i+1] == MAITAIKHU
                        && str[i+2] != OANG && str[i+2] != WOWAEN)
             {
-               i += 3; // 2nd cons + MAITAIKHU + final cons
+               i += 3; /* 2nd cons + MAITAIKHU + final cons */
             }
         } else if (th_isldvowel (str[i])) {
-            hints[i] = 1; // the ldvowel
-            i += 2; // the ldvowel + the supposedly cons
+            hints[i] = 1; /* the ldvowel */
+            i += 2; /* the ldvowel + the supposedly cons */
         } else if (str[i] == RU || str[i] == LU) {
             hints[i++] = 1;
         } else {
